2006-10-25  Per Bothner  <per@bothner.com>

	* IntNum.java (quotient): Must strip off excess zeroe from remainder
	before we check for a zero remainder for rounding up/down.  This fixes
	Savannah bug #18089 "possible rounding bug in gnu.math.IntNum".
	
2006-10-19  Per Bothner  <per@bothner.com>

	* DateTime.java (cast): Copy nameseconds.

	* DateTime.java (compare): Semi-kludge to "normalize" date-less
	time values, adjusting for timezone to asme date 0.

	* DateTime.java (adjustTimezone): Don't set millis if original did not
	have timezone.  If it did, and was a time-less date, clear time fields

	* Duration.java (times): Check for overflow.

2006-10-11  Per Bothner  <per@bothner.com>

	* Duration.java (parse): Slightly improved error message.

	* Duration.java (valueOf): Catch more errors.

	* DateTime.java (parsedate): Before strict about syntax, and
	range of days in month.
	(parseZoneMinutes): The minutes part of the offset is not optional.
	(parseTime): We don' allow leap seconds - i.e. second 60.
	(parseTime): If the hour is 24, minutes and seconds must be 0.

2006-10-06  Per Bothner  <per@bothner.com>

	* DateTime.java (parseDate): Check that day and month are in range.
	(parseZoneMinutes): Check that time zone offset is in range.
	(add): Check that argument types are allowed.

	* DateTime.java (add): Fix some logic errors.
	If TIME_MASK is clear, truncate to 00:00:00.

	* Duration.java (valueOf): Plain "P" is an error.

	* Duration (add):  Handle Duration+DateTime as DateTime+Duration.
	(div): Check for divide by 0.0 or NaN.
	(add, times): More checking for invalid arguments.

	* Numeric.java (compare): Tweak specification of return codes.
	* Duration.java (compare): Return -2 if unequal.

	* DateTime.java (minutesToTimeZone): New static method.
	(setTimeZone): New method.

2006-09-30  Per Bothner  <per@bothner.com>

	* Duration.java (valueOf): Fix off-by-one error.

2006-09-28  Per Bothner  <per@bothner.com>
